reference-architectures/multicluster-patterns/quickstart-multi-zone-deploy/manifests/mcg/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: public-store-route
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
  rules:
  - matches: # Match requests based on criteria
    - path:
        type: PathPrefix # Match any path starting with /
        value: /
    backendRefs: # Forward matched traffic to the backend service
    - name: whereami-frontend
      port: 80
